# django-ledger

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
django_ledger/: asgi.py  settings.py  urls.py  wsgi.py
financial_transactions/: apps.py  models.py
financial_transactions/management/commands/: ingestcsv.py
financial_transactions/migrations/: 0001_initial.py  0002_transaction.py
financial_transactions/tests/: conftest.py  factories.py  test_acceptance.py  test_models.py
