[tool.poetry]
name = "django-ledger"
version = "0.1.0"
description = ""
authors = ["Paul Grillenberger <grillenbergerpaul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.5"
ruff-lsp = "^0.0.54"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.2"}
mypy = "^1.10.0"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_ledger.settings"
